--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo_list",
+  "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,43 +7,30 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "description": "Todo_list",
-  "author": {
-    "name": ""
-  },
   "dependencies": {
-    "vue": "2.5.17"
+    "core-js": "^3.6.5",
+    "data-filter": "^3.1.1",
+    "firebase": "^7.19.0",
+    "git": "^0.1.5",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.27.0",
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.5",
+    "vue-router": "^3.4.3",
+    "vuelidate": "^0.7.5",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.0.4",
-    "@vue/cli-plugin-eslint": "3.0.4",
-    "@vue/cli-service": "3.0.4",
-    "eslint": "5.6.0",
-    "eslint-plugin-vue": "4.7.1",
-    "vue-template-compiler": "2.5.17"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-pwa": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-vuex": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.12"
+  }
 }
